Correct response DTOs and Unit Tests